--- a/src/App.css
+++ b/src/App.css
@@ -2,30 +2,10 @@ body{
   margin: 0;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+body
 .MainPage{
   display: flex;
-}
-.ContactLink{
-  display: block;
-  
-  width: 90%;
-  height: auto;
-  padding: 10px 0 10px;
-  border-radius: 10px;
-  
-  text-decoration: none;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  color: rgb(110,110,110);
-  word-wrap: wrap;
-
-  transition: all ease-in-out 0.2s;
-  cursor: pointer;
-  overflow-x: none;
-}
-
-.ContactLink:last-child{
-  margin: 0;
-}
-.ContactLink:hover{
-  color: black;
+}::selection {
+  color: rgb(200,200,200);
+  background: rgb(60,60,60);
 }
