--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,8 @@ body{
   margin: 0;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+*::selection {
+  color: rgb(200,200,200);
+  background: rgb(60,60,60);
+}
